melhorias nos testes da API REST